fix: formatting, questgiver fixes
Signed-off-by: Carter Calloway <carter.calloway@outlook.com>